Datakit解除root 权限依赖